[package]
name = "morf"
version = "0.1.0"
authors = ["rtulip <robert.tulip97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[lib]
name = "shared"
path = "src/shared/lib.rs"

[dependencies]
serde = "1.0.106"
ron = "0.5.1"
log = "0.4.8"
bytes = "0.5.4"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

[dependencies.amethyst]
version = "0.15.0"
default-features = false
features = ["saveload", "animation", "audio", "locale", "network", "renderer"]
